--- a/client_final/src/styles/global.css
+++ b/client_final/src/styles/global.css
@@ -209,8 +209,9 @@ body {
 .header {
   background: #57496e;
   padding: 20px 0;
-  margin-bottom: 30px;
+  /*margin-bottom: 30px;*/
 }
+
 /* line 17, ../sass/global.sass */
 .header--logo {
   color: #fff;
