--- a/client_final/src/styles/global.css
+++ b/client_final/src/styles/global.css
@@ -207,7 +207,7 @@ body {
 
 /* line 13, ../sass/global.sass */
 .header {
-  background: #57496e;
+  background: #3e474f;
   padding: 20px 0;
   /*margin-bottom: 30px;*/
 }
@@ -720,4 +720,108 @@ input:focus {
 .button-secondary:hover {
   color: #63537d;
   box-shadow: 0 0 0 2px #63537d inset;
+}
+.demo-infinite-container {
+  overflow: auto;
+  max-height: 500px;
+}
+
+.pk_link {
+  margin-left: 10px;
+  font-size: 14px;
+  font-weight: normal;
+  color: rgb(67, 132, 245);
+  cursor: pointer;
+}
+
+.css-fqbvdm {
+  background: rgb(255, 255, 255);
+  border-radius: 8px;
+}
+.css-1zftos {
+  position: relative;
+  cursor: text;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(188, 198, 208);
+  border-image: initial;
+  border-radius: 8px;
+  transition: background-color 0.2s ease 0s;
+}
+.css-8l8s0b {
+  padding: 10px 12px;
+}
+.css-o6jqtj {
+  padding: 8px 8px 8px 12px;
+}
+
+.textAreaStyle {
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  line-height: 1.47;
+  resize: none;
+  width: 100%;
+  white-space: pre-wrap;
+  background: transparent;
+  border-width: 0px;
+  border-style: initial;
+  border-color: initial;
+  border-image: initial;
+  margin: 0px;
+  outline: none;
+  padding: 0px;
+}
+
+@media (min-width: 706px){
+  .css-1panmox {
+    box-sizing: border-box;
+    max-width: 900px;
+    width: 100%;
+    margin: 10px auto;
+    padding: 0px 60px;
+  }
+}
+
+.css-gg4vpm {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+.css-1utwezw {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  align-self: flex-end;
+}
+
+.css-u4p24i {
+  display: flex;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+}
+
+.css-1tvdg3s {
+  background-color: rgb(221, 221, 221);
+  box-sizing: border-box;
+  cursor: pointer;
+  width: 27px;
+  height: 19px;
+  border-width: initial;
+  border-style: none;
+  border-color: initial;
+  border-image: initial;
+  border-radius: 15px;
+}
+.css-1nmtffo {
+  margin-left: 6px;
+  color: rgba(66, 77, 87, 0.5);
+}
+.css-11lt5zu {
+  font-size: 14px;
+  margin-right: 8px;
+}
+  .css-7ngqza {
+  margin-right: 8px;
+  color: rgba(66, 77, 87, 0.8);
 }
