--- a/client_final/src/styles/global.css
+++ b/client_final/src/styles/global.css
@@ -902,3 +902,38 @@ input:focus {
     margin-right: 8px;
     color: rgba(66, 77, 87, 0.8);
 }
+
+#components-layout-demo-custom-trigger .trigger {
+    font-size: 18px;
+    line-height: 64px;
+    padding: 0 24px;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+#components-layout-demo-custom-trigger .trigger:hover {
+    color: #1890ff;
+}
+
+#components-layout-demo-custom-trigger .logo {
+    height: 32px;
+    background: rgba(255, 255, 255, 0.2);
+    margin: 16px;
+}
+
+.css-1trnuga {
+    padding-right: 20px;
+    overflow-wrap: break-word;
+    color: rgba(66, 77, 87, 0.6);
+    flex: 1 1 0;
+}
+.mapChart {
+    height: 452px;
+    padding-top: 24px;
+    text-align: center;
+}
+.mapChart img {
+    display: inline-block;
+    max-width: 100%;
+    max-height: 437px;
+}
