--- a/client_final/src/styles/new.css
+++ b/client_final/src/styles/new.css
@@ -11,7 +11,7 @@
 
 /* styles the signed in user's name in the header */
 .header nav span {
-  color: #fff;
+  color: #212529;
   margin-left: 20px;
 }
 
